slight adjustments to routes
